[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mediscan"
version = "0.1.0"
description = "AI-powered breast cancer detection from histopathological images"
authors = [
    {name = "Vivaan Anand", email = "vivaan.anand.11@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
keywords = ["breast-cancer", "deep-learning", "medical-imaging", "histopathology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science",
]
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "grad-cam>=1.5.0",
    "streamlit>=1.36.0",
    "Pillow>=10.3.0",
    "tqdm>=4.66.0",
    "omegaconf>=2.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5.0", "pre-commit>=3.7.0", "jupyter>=1.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
